# yabrm

./: .gitignore  README.md  manage.py  pyproject.toml
ml/: admin.py  helpers.py  models.py  urls.py  views.py
ml/management/commands/: _data_transform.py  _recommandation_model.py  importdata.py  removedata.py  trainmodel.py
ml/migrations/: 0001_initial.py  0002_alter_book_image_alter_book_isbn_alter_book_isbn13_and_more.py  0003_alter_book_language_code.py  0004_alter_book_image_alter_book_name_and_more.py  0005_alter_author_name_alter_book_authors_alter_book_tags.py  0006_remove_author_goodreads_id.py  0007_remove_book_goodreads_id.py  0008_alter_book_isbn_alter_book_isbn13.py  0009_remove_user_goodreads_id.py  0010_alter_tag_name.py
ml/recommandation_models/: book_dataset.py  bst_model.py  popularity_model.py
ml/templates/ml/: book_detail.html  book_list.html  index.html
static/: styles.scss
templates/helpers/: pagination.html
templates/layout/: base.html
yabrm/: asgi.py  settings.py  urls.py  wsgi.py
